--- a/Repo/VHDLTemplateWindow.xaml
+++ b/Repo/VHDLTemplateWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DRFront"
         mc:Ignorable="d"
-        Title="DRFront VHDL Template Generator" Height="360" Width="480" MinHeight="360" MinWidth="480">
+        Title="DRFront VHDL Template Generator" Height="360" Width="480" MinHeight="360" MinWidth="480" WindowStartupLocation="CenterOwner">
     <Window.Resources>
         <local:TemplatePortBackGroundConverter x:Key="tpBackGroundConverter" />
     </Window.Resources>
