--- a/Repo/MainWindow.xaml
+++ b/Repo/MainWindow.xaml
@@ -72,11 +72,10 @@
         </Grid>
         <Canvas x:Name="cvsBoard" Width="600" Height="320" Grid.Row="3" AllowDrop="True"
                 DragEnter="Board_DragEnter" DragLeave="Board_DragLeave" DragOver="Board_DragOver" Drop="Board_Drop">
-            <Image Width="600" Height="320" HorizontalAlignment="Left" VerticalAlignment="Top"
-                   Source="Resources/Nexys.jpg"/>
         </Canvas>
         <Grid Grid.Row="4" Margin="0,5,0,0">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -86,7 +85,7 @@
                 <ColumnDefinition />
                 <ColumnDefinition Width="150"/>
             </Grid.ColumnDefinitions>
-            <local:DataGridMod ItemsSource="{Binding UserPorts}" Margin="15,0,0,0" Grid.RowSpan="4"
+            <local:DataGridMod ItemsSource="{Binding UserPorts}" Margin="15,0,0,0" Grid.RowSpan="5"
                                VirtualizingPanel.ScrollUnit="Pixel" AutoGenerateColumns="False"
                                HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                                CanUserReorderColumns="False" CanUserResizeRows="False"
@@ -112,11 +111,13 @@
                 </DataGrid.Columns>
             </local:DataGridMod>
 
-            <Button Content="VHDL Template" Grid.Row="0" Grid.Column="1" Height="24" Width="120" Margin="0,0,15,5"
+            <Button Content="Setting" Grid.Row="0" Grid.Column="1" Height="24" Width="120" Margin="0,0,15,5"
+                    HorizontalAlignment="Right" VerticalAlignment="Center" Click="Setting_Click"/>
+            <Button Content="HDL Template" Grid.Row="1" Grid.Column="1" Height="24" Width="120" Margin="0,0,15,5"
                     HorizontalAlignment="Right" VerticalAlignment="Center" Click="VHDLTemplate_Click"/>
-            <Button Content="Auto Assignment" Grid.Row="1" Grid.Column="1" Height="24" Width="120" Margin="0,0,15,5"
+            <Button Content="Auto Assignment" Grid.Row="2" Grid.Column="1" Height="24" Width="120" Margin="0,0,15,5"
                     HorizontalAlignment="Right" VerticalAlignment="Center" Click="AutoAssign_Click"/>
-            <Button Content="Reset" Grid.Row="2" Grid.Column="1" Height="24" Width="120" Margin="0,0,15,5"
+            <Button Content="Reset" Grid.Row="3" Grid.Column="1" Height="24" Width="120" Margin="0,0,15,5"
                     HorizontalAlignment="Right" VerticalAlignment="Center" Click="ResetAssign_Click"/>
         </Grid>
         <Grid Grid.Row="5" Margin="0,10">
