--- a/Repo/HDLTemplateWindow.xaml
+++ b/Repo/HDLTemplateWindow.xaml
@@ -1,17 +1,14 @@
-﻿<Window x:Class="DRFront.VHDLTemplateWindow"
+﻿<Window x:Class="DRFront.HDLTemplateWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DRFront"
         mc:Ignorable="d"
-        Title="DRFront VHDL Template Generator" Height="360" Width="480" MinHeight="360" MinWidth="480" WindowStartupLocation="CenterOwner">
+        Title="DRFront HDL Template Generator" Height="360" Width="480" MinHeight="360" MinWidth="480" WindowStartupLocation="CenterOwner">
     <Window.Resources>
         <local:TemplatePortBackGroundConverter x:Key="tpBackGroundConverter" />
     </Window.Resources>
-    <Window.DataContext>
-        <local:VHDLTemplateViewModel/>
-    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition MinHeight="30" Height="Auto"/>
@@ -20,10 +17,10 @@
         </Grid.RowDefinitions>
         <Grid Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" MinWidth="100"/>
+                <ColumnDefinition Width="Auto" MinWidth="150"/>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Label Content="Entity Name" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Content="Entity/Module Name" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <TextBox Text="{Binding EntityName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      Background="{Binding ValidEntityName, Converter={StaticResource tpBackGroundConverter}}"
                      Grid.Column="1" VerticalAlignment="Center" Height="24" Margin="0,0,15,0">
@@ -86,8 +83,8 @@
                     HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="AddRow_Click"/>
             <Button Content="Remove" Grid.Column="2" Width="60" Height="24" Margin="5,0,5,0"
                     HorizontalAlignment="Center" VerticalAlignment="Center" Click="RemoveRow_Click"/>
-            <Button Content="Save VHDL File" Grid.Column="4" Width="100" Height="24" Margin="5,0,5,0"
-                    HorizontalAlignment="Center" VerticalAlignment="Center" Click="SaveVHDL_Click"/>
+            <Button Content="Save HDL File" Grid.Column="4" Width="100" Height="24" Margin="5,0,5,0"
+                    HorizontalAlignment="Center" VerticalAlignment="Center" Click="SaveHDL_Click"/>
             <Button Content="Close" Grid.Column="5" Width="100" Height="24" Margin="5,0,5,0"
                     HorizontalAlignment="Center" VerticalAlignment="Center" Click="CloseWindow_Click"/>
         </Grid>
